blur fix on mobile devices

--- a/styles.less
+++ b/styles.less
@@ -212,6 +212,7 @@ div.main > div {
 
 #myModal {
   backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
   li {
     padding: 1em;
     list-style-type: none;
@@ -304,10 +305,11 @@ div.links-icon {
   height: 100vh;
   z-index: 0;
   background-color: rgba(8, 8, 8, 0.1);
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
 }
 
-@media only screen and (max-width: 891px) {
+@media screen and (max-width: 891px) {
   div.links {
     visibility: hidden;
   }
